Открыть /paths
